--- a/doc/系统设计方案.md
+++ b/doc/系统设计方案.md
@@ -65,5 +65,72 @@
 
 ### 应用级模块
 
-#### 注册用户管理
+#### 会员管理
+
+##### 普通会员管理
+
+###### 表结构
+
+> 表名 app_user
+
+| 字段名      | 类型          | 备注     |
+| ----------- | ------------- | -------- |
+| user_id     | nvarchar(50)  | 唯一标识 |
+| user_name   | nvarchar(50)  | 会员姓名 |
+| user_phone  | nvarchar(50)  | 手机号   |
+|             |               |          |
+| user_avatar | nvarchar(100) | 头像地址 |
+| real_name   | nvarchar(50)  | 真实姓名 |
+| view_status | nvarchar(5)   | 认证状态 |
+| idcard_no   | nvarchar(50)  | 身份证   |
+| password    | nvarchar(50)  | 密码     |
+| slat        | nvarchar(50)  | 盐       |
+| del_flag    | nvarchar(5)   | 用户标记 |
+| role_type   | nvarchar(5)   | 用户类型 |
+
+###### 接口设计
+
+##### 专业人员管理
+
+###### 表结构
+
+> 表名 app_pro_user
+
+| 字段名  | 类型 | 备注 |
+| ------- | ---- | ---- |
+| pro_id  |      |      |
+| user_id |      |      |
+|         |      |      |
+
+###### 接口设计
+
+##### 地址管理
+
+会员的地址信息，可以添加多条信息
+
+###### 表结构
+
+> 表名app_user_addr
+
+| 字段名   | 类型 | 备注 |
+| -------- | ---- | ---- |
+| addr_id  |      |      |
+| user_id  |      |      |
+| province |      |      |
+| city     |      |      |
+| area     |      |      |
+| town     |      |      |
+| detail   |      |      |
+
+#### 订单管理
+
+##### 订单中心
+
+#### 服务管理
+
+##### 维修服务管理
+
+##### 设计服务管理
+
+##### 保养服务管理
 
