--- a/dreamland-doc/01-注册登录与个人中心.md
+++ b/dreamland-doc/01-注册登录与个人中心.md
@@ -61,7 +61,8 @@ POST - app/reg/reg_by_captcha
 	"account":"手机号",
 	"password":"验证码",
 	"role_key":"角色，普通用户C,维修人员P",
-	"IMEI":"手机识别码",
+	"IMEI":"国际移动设备识别码",
+	"IMSI":"国际移动用户识别码",
 	"phone_os":"手机操作系统信息",
 }
 ```
@@ -80,7 +81,8 @@ POST - app/reg/reg_by_captcha
 	"account":"手机号",
 	"password":"验证码",
 	"role_key":"角色，普通用户C,维修人员P",
-	"IMEI":"手机识别码",
+	"IMEI":"国际移动设备识别码",
+	"IMSI":"国际移动用户识别码",
 	"login_ip":"登录ip",
 }
 ```
