--- a/dreamland-doc/01-注册登录与个人中心.md
+++ b/dreamland-doc/01-注册登录与个人中心.md
@@ -4,11 +4,11 @@
 
 APP接口的访问会经过网关转发到各个服务，此处应该是配置文件中配置项
 
-1. 开发网关：`http://localhost:7000/auth-api/`
+1. 开发网关：`http://localhost:7000/apis/`
 
-2. 测试网关：`http://ip地址/ap_api/`
+2. 测试网关：`http://ip地址/apis/`
 
-3. 正式网关：`http(s)://域名/ap_api/`
+3. 正式网关：`http(s)://域名/apis/`
 
 > 参数说明
 
