--- a/dreamland-doc/01-注册登录与个人中心.md
+++ b/dreamland-doc/01-注册登录与个人中心.md
@@ -127,7 +127,7 @@ HEADER x-user-id:user_id
 		"user_name":"用户名称",
 		"user_phone":"用户手机号",
 		"real_status":"实名状态1认证/0未认证",
-		"user_order":{
+		"user_sale":{
 			"need_to_pay":"待付款",
 			"need_to_be_served":"待维修",
 			"need_to_comment":"待评论",
