--- a/dreamland-doc/01-注册登录与个人中心.md
+++ b/dreamland-doc/01-注册登录与个人中心.md
@@ -51,19 +51,17 @@ POST - app/captcha/login/13011111111
 
 ### ✔注册用户
 
-**URL**：`app/reg/reg_by_captcha`
+**URL**：`/app/user/register/phone`
 
 **示例**：
 
 ```bash
-POST - app/reg/reg_by_captcha
+POST - /app/user/register/phone
 {
 	"account":"手机号",
 	"password":"验证码",
-	"role_key":"角色，普通用户C,维修人员P",
-	"IMEI":"国际移动设备识别码",
-	"IMSI":"国际移动用户识别码",
-	"phone_os":"手机操作系统信息",
+	"phone_type":"手机类型安卓还是IOS",
+	"phone_version":"手机操作系统版本"
 }
 ```
 
@@ -71,18 +69,17 @@ POST - app/reg/reg_by_captcha
 
 ### ✔用户登录
 
-**URL**：`app/reg/login_by_captcha`
+**URL**：`/app/user/login/phone`
 
 **示例**：
 
 ```bash
-POST - app/reg/reg_by_captcha
+POST - /app/user/login/phone
 {
 	"account":"手机号",
 	"password":"验证码",
-	"role_key":"角色，普通用户C,维修人员P",
-	"IMEI":"国际移动设备识别码",
-	"IMSI":"国际移动用户识别码",
+	"phone_type":"手机类型安卓还是IOS",
+	"phone_version":"手机操作系统版本",
 	"login_ip":"登录ip",
 }
 ```
@@ -106,12 +103,12 @@ POST - app/reg/reg_by_captcha
 
 返回用户信息和订单信息
 
-**URL**：`app/user/index/{uid}`
+**URL**：`/app/user/personal_center/{uid}`
 
 **示例**：
 
 ```bash
-POST - app/user/index/用户标识
+POST - /app/user/personal_center/{uid}
 HEADER x-access-token:token
 HEADER x-user-id:user_id
 ```
@@ -141,12 +138,12 @@ HEADER x-user-id:user_id
 
 ### ✔获取个人信息
 
-**URL**：`app/user/info/{uid}`
+**URL**：`app/user/personal_info/{uid}`
 
 **示例**：
 
 ```bash
-POST - app/user/info/用户标识
+POST - app/user/personal_info/用户标识
 HEADER x-access-token:token
 HEADER x-user-id:user_id
 ```
@@ -161,7 +158,7 @@ HEADER x-user-id:user_id
 		"id":"用户标识",
 		"user_name":"用户名称",
 		"user_phone":"用户手机号",
-		"sex":"性别1男/2女/3保密",
+		"gender":"性别1男/2女/3保密",
 		"real_name":"真实姓名"
 	}
 }
@@ -173,12 +170,12 @@ HEADER x-user-id:user_id
 
 #### ✔修改用户名
 
-**URL**：`app/user/name`
+**URL**：`/app/user/modify/name`
 
 **示例**：
 
 ```bash
-POST - app/user/name
+POST - /app/user/modify/name
 HEADER x-access-token:token
 HEADER x-user-id:user_id
 {
@@ -191,12 +188,12 @@ HEADER x-user-id:user_id
 
 #### ✔修改性别
 
-**URL**：`app/user/gender`
+**URL**：`/app/user/modify/gender`
 
 **示例**：
 
 ```bash
-POST - app/user/gender
+POST - /app/user/modify/gender
 HEADER x-access-token:token
 HEADER x-user-id:user_id
 {
@@ -209,29 +206,27 @@ HEADER x-user-id:user_id
 
 #### ✔修改手机号
 
-**URL**：`app/user/phone`
+**URL**：`/app/user/modify/phone`
 
 **示例**：
 
 ```bash
-POST - app/user/phone
+POST - /app/user/modify/phone
 HEADER x-access-token:token
 HEADER x-user-id:user_id
 {
 	"uid":"用户标识",
 	"new_phone":"新手机号",
 	"old_phone":"旧手机号",
-	"role_key":"角色，普通用户C,维修人员P",
 	"password":"验证码",
-	"IMEI":"手机IMEI号",
-	"IMSI":"手机IMEI号",
-	"phone_os":"手机操作系统信息"
+	"phone_type":"手机类型安卓还是IOS",
+	"phone_version":"手机操作系统版本"
 }
 ```
 
 **返回**：通用
 
-#### ✔实名认证（未开发）
+#### ✔实名认证
 
 **URL**：`app/user/real`
 
